--- a/MyBroker/views/index.jade
+++ b/MyBroker/views/index.jade
@@ -3,3 +3,8 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p
+  p
+  a(class='button', href='MyBroker/login') Login
+  p
+  a(class='button', href='MyBroker/register') Create Account
