--- a/MyBroker/auth/views/register.ejs
+++ b/MyBroker/auth/views/register.ejs
@@ -6,15 +6,23 @@
 Try accessing <a href="restricted">../restricted</a>, then authenticate with "tj" and "foobar".
 <form method="post" action="register">
   <p>
-    <label>Choose Username:</label>
+    <label>Username:</label>
     <input type="text" name="username">
   </p>
   <p>
-    <label>Choose Password:</label>
+    <label>First Name:</label>
+    <input type="text" name="firstname">
+  </p>
+    <p>
+    <label>Last Name:</label>
+    <input type="text" name="lastname">
+  </p>
+  <p>
+    <label>Password:</label>
     <input type="text" name="password">
   </p>
   <p>
-    <label>Enter Email:</label>
+    <label>Email:</label>
     <input type="text" name="email">
   </p>
   <p>
