--- a/MyBroker/auth/views/register.ejs
+++ b/MyBroker/auth/views/register.ejs
@@ -19,7 +19,7 @@ Try accessing <a href="restricted">../restricted</a>, then authenticate with "tj
   </p>
   <p>
     <label>Password:</label>
-    <input type="text" name="password">
+    <input type="password" name="password">
   </p>
   <p>
     <label>Email:</label>
