--- a/MyBroker/auth/views/admin/adminconsole.ejs
+++ b/MyBroker/auth/views/admin/adminconsole.ejs
@@ -5,7 +5,7 @@
     <title>MyBrokerAdminConsole</title>
     <% include ../stylesheets/adminstyle %>
   </head>
-  <body>
+<body>
     <div class="workspace">
       <div class="topline">MY BROKER ADMIN CONSOLE</div>
       <div class="sidemenu" id="menuprincipal">
@@ -16,38 +16,140 @@
           <li><a href="Abaoot">Blah</a></li>
         </ul>
       </div>
-      <div class="profilelist">
+      <div id="profileList" class="profileList">
         <p>PROFILE LIST </p>
-        <input name="New..." value=" New... " form="ProfileCommand" class="newProfile"
-cristina2009="" c="" type="submit"> <input name="Modify" value=" Edit..." form="ProfileCommand"
-type="submit"> <input name="Delete" value=" Delete " form="ProfileCommand" type="submit">
+        <div style="overflow-x:auto;"> ... profile list content ...
+          <table id="profileListTable">
+          </table>
+        </div>
+        <button id="createProfile" onclick="createProfile()"> New...
+        </button> <input name="Modify" value=" Edit..." form="ProfileCommand" type="submit">
+        <input name="Delete" value=" Delete " form="ProfileCommand" type="submit">
       </div>
-      <div class="newprofile">
+      <div id="newProfile" class="newProfile">
         <p style="text-align: center;">DEFINE NEW PROFILE</p>
-        <input name="Add" value="Add..." form="ProfileCommand" type="submit"> <input
-name="Save" value=" Save " form="ProfileCommand" class="saveNewProfile" type="submit">
-        <input name="Cancel" value=" Cancel " form="ProfileCommand" class="cancelNewProfile"
+        <table class="center">
+          <tbody>
+            <tr>
+              <td>Profile name:</td>
+              <td><input size="10" onchange="(function(t){newProfile.profileName=t;console.log(newProfile);})(this.value)"
+
+                  type="text"></td>
+              <td>Risk level:</td>
+              <td>
+                <select id="risktypes" onchange="(function(r){newProfile.risk=r;console.log(newProfile);})(this.value)">
+                  <option value="S">Speculation</option>
+                  <option value="H">Haut</option>
+                  <option value="M" selected="selected">Moyen</option>
+                  <option value="F">Faible</option>
+                  <option value="P">PouettePouette</option>
+                </select>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <p> </p>
+        <table id="profileTickers" class="fullwidth">
+          <tbody>
+            <tr>
+              <th>Ticker</th>
+              <th>Exch.</th>
+              <th>Target %</th>
+              <th>Current Value</th>
+            </tr>
+            <tr>
+              <td>Cash</td>
+              <td><br>
+              </td>
+              <td id="targetCash">100</td>
+              <td><br>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div style="overflow-x:auto;"> ... profile content ...
+          <table id="profileTable">
+          </table>
+        </div>
+        <button id="addTicker" onclick="addTickerRow('profileTickers')"> Add </button>
+        <input name="Cancel" value=" Cancel " form="ProfileCommand" class="cancelNewProfile"
+
 type="submit"> </div>
-      <div class="newTicker">
+      <div id="newTicker" class="newTicker">
         <p style="text-align: center;">ADD A NEW SYMBOL TO THE PROFILE </p>
-        <input name="Check" value=" Check " form="ProfileCommand" class="saveNewProfile"
-type="submit"> <input name="Save" value=" Save " form="ProfileCommand" class="saveNewProfile"
-type="submit"> <input name="Cancel" value=" Cancel " form="ProfileCommand" class="cancelNewProfile"
+        <input name="Check" value=" Check " form="ProfileCommand" class="saveNewProfile"
+
+type="submit"> <input name="Save" value=" Save " form="ProfileCommand" class="saveNewProfile"
+
+type="submit"> <input name="Cancel" value=" Cancel " form="ProfileCommand" class="cancelNewProfile"
+
 type="submit"> </div>
     </div>
     <script>
-      const newProfile = document.querySelector('.newProfile');
-      const newprofilediv = document.querySelector('.newprofile');
-      const cancelNewProfilediv = document.querySelector('.cancelNewProfile');
-        
-      function createProfile() {
-        newprofilediv.style.zIndex=10; 
+      /* Retrieve access to <div> elements for JavaScript control */
+      const newProfileListDiv = document.querySelector("#profileList");
+      const newProfileDiv = document.querySelector("#newProfile");
+      const newTickerDiv = document.querySelector("#newTicker");
+      
+      
+      class Ticker {
+        constructor(symbol,target,exchange) {
+        	this.symbol=symbol;
+        	this.target=target;
+        	this.exchange=exchange;
+        }
       }
-      function cancelNewProfile() {
-        newprofilediv.style.zIndex=-1; 
+      
+      class Profile {
+        constructor(name,risk) {
+          this.profileName=name;
+        	this.risk=risk;
+          this.cash=100;
+          this.tickList=[new Ticker('$$$',100,'')];
+        }
+      }
+      
+/* Function handling the button to create a new profile */      
+      function createProfile() {
+        
+        newProfileDiv.style.zIndex=10; /* Bring profile creation div up front */
+        newProfile= new Profile('temp','L'); /* Create a temp Profile object with Low risk */
+        console.log(newProfile);
+      }
+      
+/* Function adding a table row on table profileTickers for adding a ticker */      
+      function addTickerRow(t){
+        var table = document.getElementById(t);
+        var row = table.insertRow();
+        row.insertCell().setAttribute('contenteditable','true');
+        var exchange=row.insertCell();
+        exchange.setAttribute('contenteditable','true');
+        exchange.innerHTML="TSX";
+        var target=row.insertCell();
+        target.setAttribute('contenteditable','true');
+        target.innerHTML=0;
+        target.setAttribute('class','target');
+        target.setAttribute('onblur','recalculate(this)');
+        row.insertCell();
+      }
+      
+      function recalculate(tc) {
+        console.log('recalculate....')
+           var targets = document.getElementsByClassName('target');
+           var targetCash = document.getElementById('targetCash');
+        	 let sum=Number(0); 
+           for (i=0;i<targets.length;i++) {
+             sum=sum+Number(targets[i].innerText);
+             console.log(sum);
+           }
+           targetCash.innerText = 100 - sum;
+      }
+      
+/*      function cancelNewProfile() {
+        newProfileDiv.style.zIndex=-1; 
       }  
       newProfile.addEventListener('click',createProfile); 
-      cancelNewProfilediv.addEventListener('click',cancelNewProfile); 
+      cancelNewProfilediv.addEventListener('click',cancelNewProfile); */
     </script>
   </body>
 </html>
