--- a/MyBroker/auth/views/admin/adminconsole.ejs
+++ b/MyBroker/auth/views/admin/adminconsole.ejs
@@ -3,6 +3,36 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <title>MyBrokerAdminConsole</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- html to json plugin: https://www.npmjs.com/package/table-to-json -->
+    <script src="scripts/jquery.tabletojson.js"></script>
+    <script> 
+    $(document).ready(function(){
+      function saveProfileTable() {
+        try {
+             var tableJson = $('#profileTickers').tableToJSON(
+               {
+                 ignoreColumns: [3],
+                 extractor : function (cellIndex, $cell) {
+                   if ($cell.text() == "" && cellIndex <3)
+                   {console.log($cell.text());
+                    throw "anEmptyCell";}
+                   else
+                   {return $cell.text()}
+                 }
+               }
+               );
+             console.log(tableJson);
+        }
+        catch(e) {
+          alert("Empty cells. \nFill up all fields before saving");
+        }
+      }
+      $("#saveProfile").click(function(event){ saveProfileTable() });
+  	// jQuery methods go here...
+
+		});
+    </script>
     <% include ../stylesheets/adminstyle %>
   </head>
 <body>
