--- a/MyBroker/auth/views/admin/adminconsole.ejs
+++ b/MyBroker/auth/views/admin/adminconsole.ejs
@@ -10,6 +10,10 @@
     <!-- JQuery section -->
     $(document).ready(function(){
 
+// When SAVE profile is pressed, check that there are 
+// - no empty ticker cell
+// - no Unknown cell
+// - no duplicate ticker
       function saveProfileTable() {
     <!-- This function turns the table into a JSON object and saves the new profile in the DB -->
         try {
@@ -20,11 +24,22 @@
                    if ($cell.text() == "" && cellIndex <3)
                    {console.log($cell.text());
                     throw "anEmptyCell";}
+                   else if ($cell.text() == "Unknown")
+                    throw "anUnknownSymbol";
                    else
                    {return $cell.text()}
                  }
                }
                );
+             // Check if there are duplicate symbols
+			 var arrayLength = tableJson.length;
+			 var map = new Map();
+    		 for (var i = 0; i < arrayLength; i++) {
+        		    if (map.has(tableJson[i].Ticker)) 
+        		    	throw "duplicateSymbol"; 
+        		    else 
+        		    	map.set(tableJson[i].Ticker, 'foo');
+    		 }
              tableJson.name = newProfile.profileName;
              tableJson.risk = newProfile.risk;
              postNewProfile = { "name": newProfile.profileName, "risk":newProfile.risk, "stocks": tableJson}; 
@@ -34,7 +49,7 @@
                  
         }
         catch(e) {
-          alert("Empty cells. \nFill up all fields before saving");
+          alert(e);
         }
       }
       
@@ -50,7 +65,7 @@
            		var currentRow=$(this);
            		var ticker=currentRow.find(".tickerSymbol").text();
 // If ticker is not found in feed from server, 
-// need to fetch it by hand from the util API:
+// need to fetch it by hand from the util API and then update table:
            		if (typeof list[ticker] === "undefined" && ticker !== "") {
     				console.log(ticker +" is new - requesting the stock price");
     				$.when( $.ajax({ url: `utils/stock/${ticker}` }) )
@@ -207,11 +222,17 @@ type="submit"> </div>
            var targets = document.getElementsByClassName('target');
            var targetCash = document.getElementById('targetCash');
         	 let sum=Number(0); 
+        try {
            for (i=0;i<targets.length;i++) {
              sum=sum+Number(targets[i].innerText);
              console.log(sum);
+             if (sum > 100) throw("Targets>100%!");
            }
            targetCash.innerText = 100 - sum;
+        }
+        catch (e) {
+           alert(e);
+        }
       }
       
       function saveProfileTable(t) {
