--- a/MyBroker/auth/views/admin/functionCreateProfile.ejs
+++ b/MyBroker/auth/views/admin/functionCreateProfile.ejs
@@ -8,6 +8,6 @@
         updateProfileDiv.style.zIndex=10; /* Bring profile update div up front */
         modProfile= new Profile(name,risk); 
         document.getElementById('updateProfileName').innerHTML=name;
-        document.getElementById('updateProfileRisk').innerHTML='('+risk+')';
+        document.getElementById('updateProfileRisk').innerHTML=risk;
         console.log(modProfile);
       }
