--- a/MyBroker/auth/views/stylesheets/adminstyle.ejs
+++ b/MyBroker/auth/views/stylesheets/adminstyle.ejs
@@ -65,6 +65,7 @@
       
       table, th, td {
   			border: 1px solid black;
+  			text-transform: uppercase;
 			}
       table.center {
    			 margin-left:auto; 
@@ -79,7 +80,9 @@
         background-color: #4CAF50;
 			  color: white;
 			}
-      td { height: 25px;}
+      td { height: 25px;
+           text-transform: uppercase;
+         }
       
       #editProfile {
           background-color:black;
